# nrs

./: .env.sample  Cargo.toml  README.md
migrations/: 20231009051915_create_user_groups.down.sql  20231009051915_create_user_groups.up.sql  20231219145510_create_projects.up.sql  20231227061235_create_modules.up.sql
src/: main.rs
src/nrs/api/: error.rs  mod.rs  router.rs  user.rs
src/nrs/api/endpoint/: account.rs  mod.rs  module.rs  project.rs  user.rs
src/nrs/api/extract/: auth_user.rs  mod.rs  valid_payload.rs
src/nrs/api/middleware/: console.rs
src/nrs/app/: application.rs  error.rs  mod.rs
src/nrs/core/: application.rs  jwt.rs  mod.rs  router.rs
