[package]
name = "nrs"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2021"

[lib]
name = "nrs"
path = "src/nrs/lib.rs"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.15", features = ["env", "derive"] }
dotenvy = "0.15.7"
headers = "0.4.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_with = { version = "3.9.0", features = ["time_0_3"] }
sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "chrono",
] }
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }
