[package]
name = "nrs"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2021"

[lib]
name = "nrs"
path = "src/nrs/lib.rs"

[dependencies]
axum = { version = "0.8.3", features = ["json"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["env", "derive"] }
dotenvy = "0.15.7"
headers = "0.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["time_0_3"] }
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "chrono",
] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
